--- a/src/js/components/index/index.less
+++ b/src/js/components/index/index.less
@@ -26,6 +26,7 @@ body{
 }
 
 header{
+    background: url("@{imageDirPath}wg_pattern_top.jpg") repeat-x;
     .fixed-width{
         width: 955px;
         margin:0 auto;
@@ -34,20 +35,20 @@ header{
         height: 78px;
         padding-top: 24px;
     }
-}
-
-.logo{
-    display: block;
-    width: 130px;
-    height: 43px;
-    background:url("@{imageDirPath}360.png") no-repeat;
-}
-.bg-img{
-    display: block;
-    width: 350px;
-    height: 500px;
-    background:url("@{imageDirPath}www.jpg") no-repeat;
-    background-size: contain;
+    .nav{
+        padding: 8px 20px 0 20px;
+        height: 50px;
+        border-radius: 5px 5px 0 0;
+        border:1px solid #454c51;
+        background: url("@{imageDirPath}bck_nav.png") repeat-x;
+        li{
+            margin:14px 22px 0 5px;
+            display: inline-block;
+            a{
+                color:#fff;
+            }
+        }
+    }
 }
 #example-list{
     color:@color;
